--- a/2014-12-01-intro-to-es6/index.html
+++ b/2014-12-01-intro-to-es6/index.html
@@ -450,9 +450,8 @@ em {
 <ul>
 <li>Background.</li>
 <li>Goals.</li>
-<li>Features for nodejs.</li>
-<li>Features for the future.</li>
-<li>When/How can I use it?</li>
+<li>Whats new?</li>
+<li>When and how can I use it?</li>
 </ul>
 </section>
   </div>
@@ -1043,7 +1042,7 @@ a[debugSymbol] = &#39;This property value is identified by a symbol&#39;;</code>
 
 // Stack overflow in most implementations today,
 // but safe on arbitrary inputs in eS6
-factorial(100000)</code></pre>
+factorial(100000);</code></pre>
 </section>
   </div>
   <div class="slide hidden" id="slide-49">
@@ -1060,16 +1059,22 @@ var p = timeout(1000).then(() =&gt; {
     throw new Error(&quot;hmm&quot;);
 }).catch(err =&gt; {
     return Promise.all([timeout(100), timeout(200)]);
-})</code></pre>
+});</code></pre>
 </section>
   </div>
   <div class="slide hidden" id="slide-50">
+    <section class="slide-content"><h3 id="when-and-how-can-i-use-it-">When and how can I use it?</h3>
+<p align="center">
+<img src="./acb.jpg" alt="">
+</p></section>
+  </div>
+  <div class="slide hidden" id="slide-51">
     <section class="slide-content"><h1 id="thank-you">Thank you</h1>
 <p align="center" style="font-style:italic">
 Fin
 </p></section>
   </div>
-  <div class="slide hidden" id="slide-51">
+  <div class="slide hidden" id="slide-52">
     <section class="slide-content"><div class="author">
   <h1 class="name">Andre Dublin</h1>
     <h3 class="twitter">
